# labrabota5t2-dreamteam

./: .gitignore  CMakeLists.txt  README.md  build.bat  hippodrome.db
.github/workflow/: build.yml
src/: CMakeLists.txt  Hippodrome.sln  Hippodrome.vcxproj  main.c  main.cpp
src/Authorization/: auth_controller.h  reg_info_manager.h  security_manager.h  sha256.h  user_session.h
src/Authorization/imp/: auth_controller.cpp  reg_info_manager.cpp  security_manager.c  security_manager.cpp
src/Constants/: Constants.h
src/DBManagment/: ConnectionKeeper.h
src/DBManagment/imp/: ConnectionKeeper.c  ConnectionKeeper.cpp
src/DBManagment/includes/: ConnectionKeeper.h
src/Models/: Horse.h  Jockey.h  Owner.h  Prize.h  Race.h  RaceRecord.h
src/Models/Authorization/: Role.h  User.h
src/Repositories/: ConnectionKeeper.c  ConnectionKeeper.h  HorseRepository.h  JockeyRepository.h  OwnerRepository.h  PrizeRepository.h  RaceRecordRepository.h  RaceRepository.h  UserRepository.h
src/Repositories/Implementation/: HorseRepository.cpp  JockeyRepository.cpp  OwnerRepository.cpp  PrizeRepository.cpp  RaceRecordRepository.cpp  RaceRepository.cpp  UserRepository.cpp
src/Repositories/imp/: HorseRepository.cpp  JockeyRepository.cpp  OwnerRepository.cpp  PrizeRepository.cpp  RaceRecordRepository.cpp  RaceRepository.cpp  UserRepository.cpp
src/Types/: result_codes.h  types.h
src/UserInteraction/: UIManager.cpp  UIManager.h
src/UserInteraction/imp/: UIManager.cpp
src/sqlite/: CMakeLists.txt
test/: CMakeLists.txt  TestFixture.cpp  main.cpp  test.db
toolchain/: build.sh
(+2 files in other folders)
